
 * New function `get_transport_and_path_from_url`,
   similar to `get_transport_and_path` but only
   supports URLs.
   (Jelmer Vernooij)

 * Add support for file:// URLs in `get_transport_and_path_from_url`.
   (Jelmer Vernooij)

 * Add LocalGitClient implementation.
   (Jelmer Vernooij)

 BUG FIXES

  * Support filesystems with 64bit inode and device numbers.
    (André Roth)

 CHANGES

  * Ref handling has been moved to dulwich.refs.
    (Jelmer Vernooij)

 API CHANGES

  * Remove long deprecated RefsContainer.set_ref().
    (Jelmer Vernooij)

  * Repo.ref() is now deprecated in favour of Repo.refs[].
    (Jelmer Vernooij)

FEATURES

  * Add support for graftpoints. (milki)

0.9.3	2013-09-27

 BUG FIXES

  * Fix path for stdint.h in MANIFEST.in. (Jelmer Vernooij)

0.9.2	2013-09-26

 BUG FIXES

  * Include stdint.h in MANIFEST.in (Mark Mikofski)

0.9.1	2013-09-22

 BUG FIXES

  * Support lookups of 40-character refs in BaseRepo.__getitem__. (Chow Loong Jin, Jelmer Vernooij)

  * Fix fetching packs with side-band-64k capability disabled. (David Keijser, Jelmer Vernooij)

  * Several fixes in send-pack protocol behaviour - handling of empty pack files and deletes.
    (milki, #1063087)

  * Fix capability negotiation when fetching packs over HTTP.
    (#1072461, William Grant)

  * Enforce determine_wants returning an empty list rather than None. (Fabien Boucher, Jelmer Vernooij)

  * In the server, support pushes just removing refs. (Fabien Boucher, Jelmer Vernooij)

 IMPROVEMENTS

  * Support passing a single revision to BaseRepo.get_walker() rather than a list of revisions. 
    (Alberto Ruiz)

  * Add `Repo.get_description` method. (Jelmer Vernooij)

  * Support thin packs in Pack.iterobjects() and Pack.get_raw().
    (William Grant)

  * Add `MemoryObjectStore.add_pack` and `MemoryObjectStore.add_thin_pack` methods.
    (David Bennett)

  * Add paramiko-based SSH vendor. (Aaron O'Mullan)
